--- a/languages/ata-tr.pot
+++ b/languages/ata-tr.pot
@@ -6,8 +6,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: tr\n"
-"Language-Team: Ata\n"
-"Last-Translator: Ata\n"
+"Language-Team: ATA\n"
+"Last-Translator: ATA\n"
 "POT-Creation-Date: 2023-06-02 08:08+0000\n"
 "Project-Id-Version: undefined\n"
 "X-Poedit-Basepath: ..\n"
